# lore

./: GOVERNANCE.md  MAINTAINERS.md  about.toml
docs/developing/code-standards/: errors.md
docs/developing/decisions/: 00017-ffi-error-detail-on-complete-event.md
docs/proposals/: 2026-05-14-low-level-revision-api.md
lore/: Cargo.toml  build.rs
lore-aws/src/store/: immutable_store.rs
lore-base/: Cargo.toml  build.rs
lore-base/src/types/: store_types.rs
lore-capi/: lore.h
lore-client/: Cargo.toml
lore-client/src/cli/: cli.rs  client_main.rs  util.rs
lore-client/src/cli/commands/: branch.rs  file.rs  lock.rs  repository.rs  revision.rs
lore-error-set-macro/src/: codegen.rs
lore-error-set/src/: lib.rs  traced.rs
lore-integration-tests/src/: aws_store_test.rs  lib.rs  presign_test.rs  remote_store_test.rs  storage_mutable_test.rs  storage_remote_test.rs  storage_test.rs  store_fan_out_test.rs  store_keep_alive_test.rs
lore-proto/proto/lore/model/v1/: model.proto
lore-proto/proto/lore/revision/v1/: revision.proto
lore-proto/proto/lore/thin_client/v1/: model.proto  thin_client.proto
lore-proto/src/grpc/: lore.model.v1.rs  lore.revision.v1.rs  lore.thin_client.v1.rs
lore-proto/tests/: v1_thin_client.rs
lore-revision/: Cargo.toml
lore-revision/src/: commit.rs  immutable.rs  interface.rs  link.rs  relay.rs  repository.rs  shared_store.rs  state.rs
lore-revision/src/branch/: merge.rs
lore-revision/src/event/: revision_tree.rs
lore-revision/src/file/: diff.rs  dirty.rs  reset.rs  unstage.rs
lore-revision/src/link/: reset.rs
lore-revision/src/lock/file/: acquire.rs  release.rs
lore-revision/src/revision/: cherry_pick.rs  revert.rs  sync.rs
lore-revision/src/store/: composite.rs  event.rs  remote.rs
lore-revision/src/util/: path.rs
lore-revision/tests/: commit.rs  composite_store.rs  diff3_streaming.rs  dirty.rs  packstore.rs  parallel_reads.rs  reset.rs  stage.rs  sync.rs  unstage.rs
lore-server/src/: lib.rs  server.rs  settings.rs
lore-server/src/grpc/: forwarded_requests.rs  grpc_internal_server.rs  mod.rs  server.rs
lore-server/src/grpc/forwarded_requests/: revision_service.rs
lore-server/src/grpc/forwarded_revision/: mod.rs
lore-server/src/grpc/forwarded_revision/v1/: branch_create.rs  branch_delete.rs  branch_get.rs  mod.rs  service.rs
lore-server/src/grpc/revision/v1/: branch_create.rs  branch_delete.rs  branch_get.rs  service.rs
lore-server/src/grpc/thinclient/v1/: helpers.rs  revision_diff.rs  revision_tree.rs
lore-server/src/http/: mod.rs
lore-server/src/http/presigned/repository/: redeem.rs
lore-server/src/http/repositories/repository/contents/content/: get_repository_content.rs  presign_repository_content.rs
lore-server/src/plugins/: registry.rs
lore-server/src/protocol/storage/: copy.rs
lore-server/src/quic/: mod.rs  stream_handler.rs
lore-server/src/quic/quinn/: quinn_server.rs
lore-server/src/quic/replication_store_service/: client_container.rs
lore-server/src/store/: grpc_replica.rs  replica.rs  replicated_store.rs
lore-storage/src/: fragment_engine.rs  gc_event.rs  immutable_store.rs  lib.rs  maintenance.rs  packstore.rs  write.rs  write_tracker.rs
lore-storage/src/local/: immutable_store.rs
lore-telemetry/src/: drop_record.rs
lore-transport/src/quic/: client.rs
lore-transport/src/quic/storage_service/: client.rs
lore/src/: auth.rs  branch.rs  call.rs  call_delegation.rs  file.rs  interface.rs  layer.rs  link.rs  lock.rs  notification.rs  repository.rs  revision.rs  service.rs  shared_store.rs
lore/src/remote/: command.rs
lore/src/revision_tree/: call.rs  node_info.rs  node_path.rs
lore/src/storage/: call.rs  copy.rs  get.rs  get_file.rs  get_metadata.rs  handle.rs  mod.rs  mutable_compare_and_swap.rs  mutable_list.rs  mutable_load.rs  mutable_store.rs  obliterate.rs  open.rs  put.rs  put_file.rs  store.rs  upload.rs
lore/tests/: events.rs  ffi_error_events.rs
notices/: manual-additions.toml
scripts/test/: lore.py  lore_server.py  test_commit.py  test_compact.py  test_dependency.py  test_diff.py  test_dirty.py  test_forwarded_requests.py  test_layer.py  test_link.py  test_lock_query.py  test_shared_store.py
