[package]
name = "lore-revision"
edition = "2024"
version.workspace = true
publish = false

[lib]
name = "lore_revision"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
diffy = { workspace = true }
fastcdc = { workspace = true }
futures = { workspace = true }
glob-match = { workspace = true }
governor = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
infer = { workspace = true }
jsonwebtoken = { workspace = true }
keyring = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
open = "5.3.2"
opentelemetry = { workspace = true }
parking_lot = { workspace = true }
prost-types = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
lore-base = { workspace = true }
lore-error-set = { workspace = true }
lore-credential = { workspace = true }
lore-storage = { workspace = true }
lore-macro = { workspace = true }
lore-proto = { workspace = true }
lore-telemetry = { workspace = true }
lore-transport = { workspace = true }
uuid = { workspace = true, features = ["zerocopy"] }
xxhash-rust = { workspace = true }
zerocopy = { workspace = true }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Storage_ProjectedFileSystem", "Win32_Storage_FileSystem", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_IO", "Win32_Security"] }

[dev-dependencies]
lore-storage = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tempfile = "3"
trybuild = { workspace = true }

[features]
default = []
oodle = ["lore-storage/oodle"]
integration_tests = []
failure_generator = []
seeding = []
trace_log = ["lore-base/trace_log"]
vfs = []
