[package]
name = "lore"
edition = "2024"
version.workspace = true
publish = false

[lib]
name = "lore"
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
bitcode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
enum_dispatch = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
lore-base = { workspace = true }
lore-storage = { workspace = true }
lore-revision = { workspace = true }
lore-credential = { workspace = true }
lore-transport = { workspace = true }
lore-error-set = { workspace = true }
lore-macro = { workspace = true }
lore-notification = { workspace = true }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Networking_WinSock"] }

[build-dependencies]
anyhow = { workspace = true }
cbindgen = { version = "=0.29.2", default-features = false }
cc = "1.2.32"
glob = "0.3.2"
blake3 = { workspace = true }
regex = "1.11.1"
vergen = { workspace = true }

[features]
default = []
oodle = ["lore-revision/oodle"]

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
